add service gidromed

--- a/.env
+++ b/.env
@@ -61,3 +61,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+STORMGLASS_API_KEY=bad2020e-2cf4-11ef-aa85-0242ac130004-bad20272-2cf4-11ef-aa85-0242ac130004
